# HyperCache

./: .dockerignore  .gitignore  README.md  WORKSPACE  boost.BUILD
LICENSES/: README.md
PoC/: README.md
bazeltest/: .gitignore  BUILD  WORKSPACE  boost.BUILD
bazeltest/src/: main.cc
docker/: Dockerfile.hc_db.image_build  Dockerfile.hc_db.local_build  Dockerfile.hc_proxy.image_build  Dockerfile.hc_proxy.local_build
hypercache_db/: .gitignore  BUILD  CMakeLists.txt  Makefile  conanfile.py
hypercache_db/include/: core.hpp  core_maps.hpp  data_chunk.hpp  main.h
hypercache_db/src/: hc_db.cpp  hc_db.h  main.cc  main.cpp
hypercache_proxy/: .gitignore  BUILD  CMakeLists.txt  Dockerfile  conanfile.txt  run.sh
hypercache_proxy/src/: main.cc
lib/hyperhash/: BUILD  hyperhash.hpp
lib/hypermap/: BUILD  hypermap.hpp
src/: .gitignore
src/hypercache_db/: BUILD
src/hypercache_db/include/: core.hpp  core_maps.hpp
src/hypercache_db/src/: core.cc  main.cc
src/hypercache_proxy/include/: main.h
src/lib/atomstr/: BUILD  atomstr.hpp
src/lib/datachunk/: BUILD  datachunk.hpp
src/lib/hypermap/: BUILD  hyperhash.hpp  hypermap.hpp
